# fly_fishing_log

./: .flake8  .gitignore  CLI_REGIONAL_INTEGRATION.py  CLI_URL_INPUT_GUIDE.md  QUICK_START.md  README.md  REGIONAL_URL_INPUT_SUMMARY.md  TEST_REGIONAL_SCRAPER.md  TEST_VERSION_SUMMARY.md  cli_regional_mode.py  coverage_report.txt  demo_regional_scrape.py  pyproject.toml  regions_urls.txt  test_auckland_waikato.py  test_region_scrape.py  test_regional_parser.py
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
config/: nzfishing_config.yaml  requirements.txt
database/: schema.sql
docs/: ARCHITECTURE.md  COMPLIANCE.md  DATABASE.md  README.md  RELEASE_NOTES.md  TROUBLESHOOTING.md  phase9_validation_report.md  quickstart.md  quickstart_verification.md
specs/001-nzfishing-scraper/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  cli.py  config.py  exceptions.py  fetcher.py  logger.py  models.py  parser.py  pdf_generator.py  regional_parser.py  storage.py
templates/: river_detail.html
test_output/: auckland_waikato_raw.html
tests/: __init__.py  conftest.py
tests/contract/: test_fetcher_rates.py  test_fetcher_robots.py
tests/fixtures/: mock_server.py  sample_pages.py
tests/integration/: test_caching.py  test_full_workflow.py  test_rate_limiting.py  test_region_discovery.py  test_river_detail_extraction.py  test_river_discovery.py
tests/unit/: test_cache_ttl.py  test_fetcher_retry.py  test_logger_requests.py  test_no_inference.py  test_parser_details.py  (+5 more)
(+5 files in other folders)
